Added tests, started responsive

--- a/src/app/components/Countries/Countries.scss
+++ b/src/app/components/Countries/Countries.scss
@@ -9,3 +9,9 @@
   padding: 0 70px;
   margin-top: 50px;
 }
+
+@media (width <= 800px){
+  .countriescontainer{
+    justify-content: center;
+  }
+}
