--- a/src/app/components/ActionBar/actionBar.scss
+++ b/src/app/components/ActionBar/actionBar.scss
@@ -2,6 +2,7 @@
 
 .actionbar{
   display: flex;
+  flex-wrap: wrap;
   padding: 0 70px;
   margin-top: 40px;
   justify-content: space-between;
@@ -98,4 +99,18 @@
     background-color: $background-secondary-color-light;
     color: $text-color-light;
   }
+}
+
+@media (width <= 800px){
+  .actionbar{
+    justify-content: center;
+    &__searchcontainer{
+      margin-bottom: 20px;
+      width: 100%;
+    }
+    &__search{
+      width: calc(100% - 2.5rem);
+    }
+  }
+
 }
