--- a/src/app/components/Country/Country.scss
+++ b/src/app/components/Country/Country.scss
@@ -11,7 +11,7 @@
 .infocountry{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 70px 230px 70px;
+  grid-template-rows: repeat(3, auto);
   align-content: center;
   h1{
     margin-bottom: 40px;
@@ -21,6 +21,7 @@
   }
   &__borders{
     grid-area: 3 / 1 / 4 / 3;
+    margin-top: 50px;
   }
 }
 
@@ -36,6 +37,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+  margin-bottom: 50px;
   a{
     margin-top: 15px;
     text-decoration: none;
